# trainrs

./: .gitignore  CLAUDE.md  Cargo.toml  FORMULA_ENGINE.md  README.md  STRESS_TESTING.md
.github/workflows/: benchmarks.yml  memory-stress-tests.yml
benches/: performance_benchmarks.rs
docs/: BENCHMARK_WORKFLOW_SETUP.md  CODEBASE_REVIEW.md  DEVICE_QUIRKS.md  FIT_RECOVERY_FIELDS.md  MEMORY_STRESS_TESTING.md  PERFORMANCE.md  README.md  cli-reference.md  contributing.md  data-formats.md  faq.md  fit-processing-best-practices.md  sports-science.md  training-load.md  troubleshooting.md
docs/developer-guide/: README.md  best-practices.md  developer-field-basics.md  getting-started.md  integration-guide.md  registry-system.md  sensor-integration.md  testing-guide.md  troubleshooting.md
docs/developer-guide/examples/: add-stryd-support.rs  custom-sensor-integration.rs
docs/fit-import/: advanced-usage.md  getting-started.md
docs/fit-import/examples/: batch-processing.rs  developer-fields.rs  error-handling.rs  simple-import.rs
proptest-regressions/: tss.txt
scripts/: stress_test.sh  valgrind_check.sh
src/: config.rs  data_management.rs  database.rs  device_quirks.rs  error.rs  formulas.rs  lib.rs  logging.rs  main.rs  models.rs  multisport.rs  performance.rs  pmc.rs  power.rs  recovery.rs  running.rs  stress_testing.rs  swimming.rs  training_effect.rs  training_plan.rs  tss.rs  vo2max.rs  zones.rs
src/export/: csv.rs  json.rs  ml.rs  mod.rs  pwx.rs  text.rs
src/formulas/: config.rs
src/import/: csv.rs  developer_registry.json  developer_registry.rs  fit.rs  fit_cache.rs  fit_recovery.rs  fit_streaming.rs  gpx.rs  logging.rs  mod.rs  parallel.rs  streaming.rs  tcx.rs  validation.rs  validation_rules.rs
tests/: error_reporting_tests.rs  fit_cache_tests.rs  fit_validation_suite.rs  formula_evaluator_tests.rs  integration_tests.rs  memory_leak_tests.rs  parallel_import_tests.rs  real_world_fit_files.rs  stress_testing_integration.rs  stress_tests.rs
tests/fixtures/: README.md
