[package]
name = "trainrs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
csv = "1.3"
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
thiserror = "1.0"
statrs = "0.17"
tabled = "0.16"
colored = "2.1"
plotters = { version = "0.3", optional = true }
quick-xml = "0.31"
gpx = "0.10"
fitparser = "0.4"
indicatif = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
charts = ["plotters"]

[dev-dependencies]
rust_decimal_macros = "1.36"
