[package]
name = "trainrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "trainrs"
path = "src/lib.rs"

[[bin]]
name = "trainrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
csv = "1.3"
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"
thiserror = "1.0"
statrs = "0.17"
tabled = "0.16"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
plotters = { version = "0.3", optional = true }
quick-xml = "0.31"
gpx = "0.10"
fitparser = "0.4"
indicatif = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
dirs = "5.0"
# Database and performance dependencies
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
bincode = "1.3"
flate2 = "1.0"
meval = "0.2"
sha2 = "0.10"

[features]
default = []
charts = ["plotters"]

[dev-dependencies]
rust_decimal_macros = "1.36"
tempfile = "3.8"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
glob = "0.3"

[[bench]]
name = "performance_benchmarks"
harness = false
